confirmation link html file after email sent added

--- a/api/views/sendEmailToConfirm.hbs
+++ b/api/views/sendEmailToConfirm.hbs
@@ -379,7 +379,7 @@
                                     <tr>
                                       <td>
                                         <a
-                                          href="https://cms-api-heraldcollege.vercel.app/"
+                                          href={{link}}
                                           target="_blank"
                                           >Confirm your email</a
                                         >
@@ -395,6 +395,7 @@
                         <p>
                           Happy Buy and Sell to you, <br />From Xchange Team.
                         </p>
+                        <p>This verification link will expire in 24 hours.</p>
                       </td>
                     </tr>
                   </table>
