--- a/api/views/confirm.hbs
+++ b/api/views/confirm.hbs
@@ -31,9 +31,10 @@
       <i class="fa fa-check main-content__checkmark" id="checkmark"></i>
 
       <p class="main-content__body" data-lead-id="main-content-body">
-        Your email has been confirmed. <br />
+        Your email <strong>{{email}}</strong> has been confirmed. <br />
         Now you can go back and sign into your Xchange account.
-      </p>
+      </p> 
+      
     </div>
 
     <footer class="site-footer" id="footer">
