--- a/api/views/email.hbs
+++ b/api/views/email.hbs
@@ -357,7 +357,7 @@
                   <table role="presentation" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
-                        <p>Hello {{message}}</p>
+                        <p>Hello {{fullName}}</p>
                         <p>Welcome to the Xchange Classified Application</p>
 
                         <p>Please verify your email:</p>
@@ -379,7 +379,7 @@
                                     <tr>
                                       <td>
                                         <a
-                                          href={{link}}
+                                          href={{verifyLink}}
                                           target="_blank"
                                           >Confirm your email</a
                                         >
